--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 		var socket = io.connect('/');
 		socket.on('connect', function()
 		{
-			socket.emit('addme', prompt('who are you?'));
+			socket.emit('addUser', prompt('who are you?', 'annoymous'));
 		});
 
 		socket.on('chat', function(username, data)
 		{
-			var p = document.createElement('p');
-			p.innerHTML = username + ':' + data;
-			document.getElementById('output').appendChild(p);
+			var p = username + ':' + data + '<br />';
+			document.getElementById('output').innerHTML += p;
 		});
 
 		window.addEventListener('load', function()
@@ -23,17 +22,27 @@
 			document.getElementById('sendtext').addEventListener('click', function()
 			{
 				var text = document.getElementById('data').value;
-				socket.emit('sendchat', text);
+				socket.emit('sendChat', text);
 			}, false);
 		}, false);
 
 	</script>
 </head>
 <body>
-	<div id="output"></div>
-	<div id="send">
-		<input type="text" id="data" size="100"/><br />
-		<input type="button" id="sendtext" value="Send Text" />
+	<div id="container">
+		<header>Lee's 聊天室</header>
+		<div class="content">
+			<aside id="userlist"></aside>
+			<section>
+				<section id="output"></section>
+				<section id="send">
+					<input type="text" id="data" size="100"/><br />
+					<input type="button" id="sendtext" value="Send Text" />
+				</section>
+			</section>
+		</div>
+		
 	</div>
+	
 </body>
 </html>
